--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -48,11 +48,20 @@ th {
   background-color: rgb(140, 186, 255);
 }
 
-td:hover {background-color: #bebebe;}
-
 .calendar {
   margin: 0 auto;
 }
+
+.matchday {
+  font-size: 10px;
+  border-style: dotted;
+  border-radius: 2px;
+  border-color: #888;
+  border-width: thin;
+}
+
+.matchday:hover {background-color: #bebebe;}
+
 
 .calendar-day {
   padding: 5px;
