feat: finish frontend
created the remaining parts, so filter, addition,
and the calendar itself

--- a/calendar-frontend/src/index.css
+++ b/calendar-frontend/src/index.css
@@ -52,6 +52,7 @@ table {
 
 .content {
   text-align: center;
+  padding: 5px 5px 5px 5px
 }
 
 
@@ -71,6 +72,16 @@ div {
   padding: 0 10px 0 10px;
 }
 
+.grid-container {
+  display: grid;
+  padding: 5px;
+  grid-gap: 5px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  height: 80vh;
+  width: 95vw;
+}
+
 .month {
   width: 100px;
 }
@@ -79,13 +90,17 @@ div {
   display: inline-block;
 }
 
-th, td {
-  width: 12vw;
-  height: 12vh;
+.day-title {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  background-color: rgb(140, 186, 255);
   border-bottom: 1px solid #ddd;
+  font-weight: bold;
 }
 
-td {
+.day-slot {
   border-width: 1px solid #ddd;
   vertical-align: baseline;
   color: #888;
@@ -93,17 +108,17 @@ td {
 }
 
 .active-day {
+  padding: 3px;
   color: #000;
   background-color: #eee;
 }
 
-th {
-  text-align: center;
-  background-color: rgb(140, 186, 255);
-}
-
 .calendar {
   margin: 0 auto;
+}
+
+.datepicker {
+  padding: 0px 5px 0px 5px;
 }
 
 .matchday {
